# bentoctl

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  codecov.yaml  mkdocs.yml  pylintrc  pyproject.toml  setup.py  testop_config.yaml  unit.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  end2end.yaml  release.yml
bcdt/: __init__.py  config_manager.py  config_mng.py  deployer_mng.py  deployers.py  deployment_spec.py  deployment_store.py  deploymentspec.py  exceptions.py  operator_loader.py  operator_manager.py  ops.py  plugin_loader.py  plugin_manager.py  plugin_mng.py  utils.py  validator.py
bcdt/cli/: __init__.py  cli_interactive_manager.py  deployer_management.py  interactive.py  operator_management.py  plugin_management.py
bcdt/operator/: __init__.py  constants.py  loader.py  manager.py
bentoctl/: __init__.py  console.py  deployment.py  deployment_config.py  deployment_spec.py  docker_utils.py  exceptions.py  operations.py  ops.py  terraform.py  utils.py
bentoctl/cli/: __init__.py  helper_scripts.py  interactive.py  operator_management.py  utils.py
bentoctl/operator/: README.md  __init__.py  constants.py  manager.py  operator.py  registry.py  utils.py
bentoctl/operator/utils/: __init__.py  git.py  github.py
bentoctl/utils/: __init__.py  temp_dir.py  terraform.py  usage_stats.py
bentoctl/utils/operator_helpers/: __init__.py  create_deployable.py  generate.py  utils.py  values.py
ci/: end2end_test.sh  install_test_deps.sh  install_test_deps.sh.cmd  linter.sh  unit_tests.sh
completions/: bcdt_completion.bash  bcdt_completion.fish  bcdt_completion.zsh  bentoctl_completion.bash  bentoctl_completion.fish  bentoctl_completion.zsh
deployers/: test.py
deployers/aws-lambda-deployer/: delete.py  deploy.py  describe.py  lambda_config.json  requirements.txt  update.py
deployers/aws-lambda-deployer/.github/workflows/: e2e-test-deploy.yaml  help-action.yml  slash-command-dispatcher.yaml
deployers/aws-lambda-deployer/aws_lambda/: Dockerfile  __init__.py  app.py  config.yml  entry.sh
deployers/aws-lambda-deployer/tests/: classifier.py  test_api.py
deployers/azure-functions-deployer/: .gitignore  README.md  azure_config.json  delete.py  deploy.py  deployer_conf.py  describe.py  requirements.txt  update.py
deployers/azure-functions-deployer/.github/workflows/: e2e-test-deploy.yaml
deployers/azure-functions-deployer/azurefunctions/: Dockerfile  __init__.py  app_init.py  host.json
deployers/azure-functions-deployer/utils/: __init__.py
deployers/google-cloud-run-deployer/: README.md  cloud_run_config.json  delete.py  deploy.py  describe.py  requirement.txt  update.py
deployers/google-cloud-run-deployer/.github/workflows/: stale.yml
deployers/google-cloud-run-deployer/utils/: __init__.py
deployers/pkgs/: __init__.py  thismodule.py
dev/: format.sh  lint.sh  release.sh
docs/: 013-deployment.md  README.md  cli-reference.md  core-concepts.md  customizing-deployments.md  introduction.md  managing-deployments.md  operator-list.md  quickstart.md
docs/cloud-deployment-reference/: README.md  aws-ec2.md  aws-lambda.md  aws-sagemaker.md  azure-container-instance.md  azure-function.md  google-cloud-run.md  google-compute-engine.md  heroku.md  index.md
prototype/: cli.py  importer.py  setup.py  tools.py
prototype/cli/: __init__.py  deployer_management.py
tests/: README.md  build_deployables.py  conftest.py  test_cli_basic.py  test_deployment_config.py  test_deployment_config.yaml  test_deployment_spec.py  test_deployment_spec.yaml  test_operator.py  test_operator_registry.py  test_operator_utils.py
tests/integration/: conftest.py  test_service.py
tests/test-operator/: NOTES.md  README.md  deployment_config.json  operator_config.py
tests/test-operator/testop/: __init__.py  delete.py  deploy.py  describe.py  update.py
tests/testbento/: bentofile.yaml  service.py  train.py
tests/testop/: .gitignore  README.md  __init__.py  delete.py  deploy.py  describe.py  requirements.txt  update.py
tests/testop/tests/: classifier.py
tests/testop/utils/: __init__.py
tests/unit/: test_deployment_config.py  test_deployment_config.yaml
tests/unit/cli/: test_cli_basic.py  test_interactive.py
tests/unit/operator/: test_operator.py  test_operator_registry.py  test_operator_utils.py
