[tool.poetry]
name = "bentoctl"
version = "0.3.4"
description = "Fast model deployment with BentoML on cloud platforms."
authors = ["bentoml.org <contact@bentoml.com>"]
homepage = "https://github.com/bentoml/bentoctl"
readme = "./README.md"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
bentoctl = "bentoctl.cli:bentoctl"

[tool.poetry.urls]
"Source" =  "https://github.com/bentoml/bentoctl"
"User Slack community" = "http://join.slack.bentoml.org"
"Bug Reports" = "https://github.com/bentoml/bentoctl/issues"

[tool.poetry.dependencies]
python = "^3.7"
bentoml = "1.*"
click = "^8"
cerberus = "^1"
rich = ""
PyYaml = "^6"
simple-term-menu = "0.4.4"
importlib-metadata = { version = "", python = "<3.8" }
docker = "^5"
semantic_version = "^2.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pylint = "^2.6.2"
black = "*"
isort = "^5"
pytest = "^6"
pytest-cov = "^3"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode="strict"

[build-system]
# Use the latest poetry build system to enable the use of `pip install -e`. After this change is released, we can switch back to "poetry_core>=1.0.0"
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
